--- a/Shopping Cart/cart.html
+++ b/Shopping Cart/cart.html
@@ -6,8 +6,13 @@
     <title>Shopping Cart</title>
 </head>
 <body>
-    <input type="text" name="" id="product-name-field">
-    <input type="text" id="product-quantity">
+    <input type="text" name="" id="product-name-field" placeholder="product name">
+    <input type="text" id="product-quantity-field" placeholder="Quantity">
+    <button onclick="addProduct()" id="btn-add-product">Add Product</button>
+    <br>
+    <ul id="product-container">
+
+    </ul>
     <script src="cart.js"></script>
 </body>
 </html>
